--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -30,7 +30,7 @@
       <h2 class="govuk-heading-m">Eligible to apply</h2>
     </div>
     <p class="govuk-body">RPA wants to fund projects that have a higher environmental benefit.<br><br>
-      We will do this by inviting applicants with projects near protected sites to submit a full application.<br><br>
+      We will do this by inviting applicants with projects near protected sites (for example, SSSI) to submit a full application.<br><br>
       Depending on the number of applications received, we may invite projects outside protected sites to submit a full application.</p>
 
   <div class="govuk-warning-text">
@@ -42,7 +42,7 @@ The likelihood of a full application being successful will also depend on the nu
 </div>
 <h2 class="govuk-heading-m">Next steps</h2>
 <p class="govuk-body">Next, add your business and contact details and submit them to the RPA (you should only do this once).</p>
-<p>You’ll get an email with your score and answers, and a reference number.</p>
+<p>You’ll get an email with your answers and a reference number.</p>
 <br/><br/>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
