--- a/app/views/slurrystorage/current/covers.html
+++ b/app/views/slurrystorage/current/covers.html
@@ -41,9 +41,9 @@ Covers
                 },
 
                 {
-                  value: "Not needed, the slurry is treated with acidification",
+                  value: "acidification",
                   text: "Not needed, the slurry is treated with acidification",
-                  checked: checked("covers", "Not needed, the slurry is treated with acidification")
+                  checked: checked("covers", "acidification")
                 },
 
                 {
