--- a/app/views/slurrystorage/current/existing-size-storage-fail.html
+++ b/app/views/slurrystorage/current/existing-size-storage-fail.html
@@ -26,12 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is to: <br>
-        <ul class="govuk-body">
-          <li>expand current storage levels	to 	6 months</li>
-          <li>make your storage fit for purpose if capacity is already 6 months or more</li>
-        </ul>
-      </p>
+      <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.</p>
 
 <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
