--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -77,14 +77,10 @@ Existing size storage
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is to: <br>
-            <ul class="govuk-body">
-              <li>expand current storage levels	to 	6 months</li>
-              <li>make your storage fit for purpose if capacity is already 6 months or more</li>
-            </ul>
-            </p>
-            <p class=govuk-body">A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).
-          </p>
+          <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
+            For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
+            Any capacity above 6 months is not covered by the grant.<br><br>
+            You must maintain at least 6 months’ capacity for the duration of the grant funding agreement.</p>
      </div>
    </div>
 
