--- a/app/views/slurrystorage/current/farmer-type.html
+++ b/app/views/slurrystorage/current/farmer-type.html
@@ -32,7 +32,9 @@ What is your business?
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    text: "Select all that apply"
+                  },
 
                   items: [
                 {
