--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -29,7 +29,7 @@ Planned size storage
                   name: 'planned-size-storage',
                   fieldset: {
                       legend: {
-                          text: 'How many months’ slurry storage capacity will you have?',
+                          text: 'How many months’ slurry storage capacity will you have after the project?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -74,9 +74,11 @@ Planned size storage
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
-            For example, if you have 4 months' serviceable storage, we will fund another 2 months.<br><br>
+            For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
             Any capacity above 6 months is not covered by the grant.<br><br>
-            You must maintain at least 6 months' capacity for the duration of the grant funding agreement.</p>
+            You must maintain at least 6 months’ capacity for the duration of the grant funding agreement.</p>
+
+
       </div>
    </div>
 
