--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -41,7 +41,7 @@
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>are a dairy, beef or pig farmer with an existing slurry system</li>
-            <li>your business is registered in England or you will do the grant-funded work in England</li>
+            <li>your slurry store is in England</li>
             <li>estimate the project costs are over £50,000 </li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, the type of storage, the capacity, the type of cover, the OS grid reference)</li>
+        <li>information about the project (for example, type of store and capacity, type of cover and size, approximate size and quantity of other items you need, the OS grid reference)</li>
         <li>a list of the items you’d like to buy for the project</li>
         </ul>
       <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
