--- a/app/views/slurrystorage/current/tenancy-length.html
+++ b/app/views/slurrystorage/current/tenancy-length.html
@@ -25,7 +25,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have a tenancy agreement for 5 years after the final grant claim?
+                Do you have a tenancy agreement for 5 years after the final grant payment?
               </h1>
             </legend>
             <br>
