--- a/app/views/slurrystorage/current/planned-size-storage-fail.html
+++ b/app/views/slurrystorage/current/planned-size-storage-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is to expand current storage levels to 6 months.</p>
+      <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.</p>
       <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
       </div>
