--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -14,7 +14,7 @@ Standardised costs
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-<a class="govuk-back-link" href="covers">Back</a>
+<a class="govuk-back-link" href="warning">Back</a>
 {% endblock %}
 
 {% block content %}
