--- a/app/views/slurrystorage/current/project-summary-fail.html
+++ b/app/views/slurrystorage/current/project-summary-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="https://grants-prototype2.herokuapp.com/slurrystorage">Back</a>
+  <a class="govuk-back-link" href="project-summary">Back</a>
 {% endblock %}
 
 {% block content %}
