--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -84,7 +84,7 @@ What type of cover will you have?
                 {{ storeTypeCost[storeType].text }}
               </li>
               <li>
-                Increase:  {{ data['current-capacity'] }}m<sup>3</sup>
+                Increase:  {{ data['current-capacity'] | toFixed(2) | commafy }}m<sup>3</sup>
               </li>
 
             </ul>
