--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -114,7 +114,7 @@ What type of cover will you have?
                   {{ coverTypeCost[coverType].text }}
                 </li>
                 <li>
-                  Size: {{ data['cover-size'] }}m<sup>2</sup>
+                  Size: {{ data['cover-size'] | toFixed(2) | commafy}}m<sup>2</sup>
                 </li>
 
               </ul>
