--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -102,7 +102,9 @@ What type of cover will you have?
             {% endif %}
 
 
-            {% if data['covertype'] != 'none' %}
+            {% if data['covertype'] != 'none'  %}
+            {% if data['covers'] != 'acidification' %}
+
           <div>
             <h2 class="app-step-nav-related__heading">
               <span class="app-step-nav-related__pretitle">Cover</span>
@@ -119,12 +121,13 @@ What type of cover will you have?
 
               </ul>
 
-              {# Do not print anything about covers, as I've checked 'I already have cover'  #}
+              {# Do not print anything about covers, as I've checked 'I already have cover' and also ' selected 'Acidification' on Covers page  #}
               {% else %}
-              
+
 
             </nav>
             </div>
+        {% endif %}
         {% endif %}
 
 
