--- a/app/views/slurrystorage/current/project-summary-fail.html
+++ b/app/views/slurrystorage/current/project-summary-fail.html
@@ -27,9 +27,9 @@
 
 
       <p class="govuk-boday">You can only apply for a grant of up to 50% of the estimated costs.</p>
-      <p class="govuk-boday">The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is £250,000.</p>
-
-
+      {{ govukInsetText({
+        text: "The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is £250,000."
+      }) }}
 
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
