--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -29,9 +29,7 @@
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Eligible to apply</h2>
     </div>
-    <p class="govuk-body">RPA wants to fund projects that have a higher environmental benefit.<br><br>
-      We will do this by inviting applicants with projects near protected sites (for example, SSSI) to submit a full application.<br><br>
-      Depending on the number of applications received, we may invite projects outside protected sites to submit a full application.</p>
+    <p class="govuk-body">RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application form.</p>
 
   <div class="govuk-warning-text">
 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
