--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -55,7 +55,7 @@ What type of cover will you have?
               <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="covertype2" name="covertype" type="radio" value="none" {{ checked("covertype", "none") }}>
         <label class="govuk-label govuk-radios__label" for="covertype2">
-          I already have a cover
+          I already have an impermeable cover
         </label>
       </div>
             </div>
