--- a/app/views/slurrystorage/current/covers.html
+++ b/app/views/slurrystorage/current/covers.html
@@ -77,7 +77,7 @@ Covers
               </span>
             </summary>
             <div class="govuk-details__text">
-              Acidification is the use of acid treatment to lower the PH value of slurry  to stabilise ammonia emissions.
+              Acidification is the use of acid treatment to lower the pH value of slurry  to stabilise ammonia emissions.
             </div>
           </details>
       </div>
