--- a/app/views/slurrystorage/current/item-sizes-quantities.html
+++ b/app/views/slurrystorage/current/item-sizes-quantities.html
@@ -38,7 +38,7 @@ Item sizes and quantities
               {% if properties['measuringUnit'] == 'cubic' %}
                 m<sup>3</sup>
               {% elif properties['measuringUnit'] == 'unit' %}
-                items(s)
+                item(s)
               {% else %}
                 metre(s)
               {% endif %}
