--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -118,7 +118,7 @@ Project summary
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-warning-text__assistive">Warning</span>
-    The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is capped at £250,000.
+    The minimum grant you can claim is £25,000. The maximum grant is capped at £250,000.
   </strong>
 </div>
 
