--- a/app/views/slurrystorage/current/remaining-costs-fail.html
+++ b/app/views/slurrystorage/current/remaining-costs-fail.html
@@ -28,11 +28,11 @@
       <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
 {{ govukInsetText({
-    html: '<p>This grant is to:</p>
+    html: '<p>You can use:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>loans</li>
       <li>overdrafts</li>
-      <li>the Basic Payment Scheme agri-environment schemes such as the Countryside Stewardship Scheme</li>
+      <li>the Basic Payment Scheme</li>
     </ul>
       '
 }) }}
