--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -22,59 +22,53 @@ Current storage capacity
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-  {# include logice if it's a New store  #}
+  {# include logic if it's a New store  #}
   {% if (data['projecttype'] == "Replace") %}
 
 
-        {{ govukInput({
-          label: {
-            html: "What estimated volume do you need <br>to have 6 months’ serviceable storage?",
-            classes: "govuk-label--l",
-            isPageHeading: true
-          },
-          hint: {
-            html: "Enter the difference between your current serviceable storage<br> and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres"
-          },
-          classes: "govuk-input--width-5",
-          id: "current-capacity",
-          name: "current-capacity",
-          suffix: {
-            html: "m<sup>3</sup>"
-          },
-         value: data['current-capacity'],
+  <div class="govuk-form-group">
+  <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
+    What estimated volume do you need <br>to have 6 months’ serviceable storage?
+    </label>
+  </h1>
+  <div id="current-capacity-hint" class="govuk-hint">
+    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
-          spellcheck: false
+  </div>
+  <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
+    <div class="govuk-input__suffix" aria-hidden="true">m<sup>3</sup></div>
+  </div>
+</div>
+
+
+        {{ govukWarningText({
+          html: "This grant is to get your serviceable storage levels to 6 months. Any capacity above 6 months is not covered by the grant.",
+          iconFallbackText: "Warning"
         }) }}
 
         {% else %}
-        {{ govukInput({
-          label: {
-            html: "What estimated additional volume do you need to have 6 months’ serviceable storage?",
-            classes: "govuk-label--l",
-            isPageHeading: true
-          },
-          hint: {
-            html: "Enter the difference between your current serviceable storage <br> and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter estimated volume in cubic metres"
-          },
-          classes: "govuk-input--width-5",
-          id: "current-capacity",
-          name: "current-capacity",
-          suffix: {
-            html: "m<sup>3</sup>"
-          },
-         value: data['current-capacity'],
+        <div class="govuk-form-group">
+        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
+          What estimated additional volume do you need to have 6 months’ serviceable storage?
+          </label>
+        </h1>
+        <div id="current-capacity-hint" class="govuk-hint">
+          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
-          spellcheck: false
+        </div>
+        <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
+          <div class="govuk-input__suffix" aria-hidden="true">m<sup>3</sup></div>
+        </div>
+      </div>
+
+        {{ govukWarningText({
+          html: "This grant is to get your serviceable storage levels to 6 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 2 months. <br><br>Any capacity above 6 months is not covered by the grant.",
+          iconFallbackText: "Warning"
         }) }}
-
 {% endif %}
 
-{% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
-{{ govukWarningText({
-  html: "This grant is to get your serviceable storage levels to 6 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 2 months. <br><br>Any capacity above 6 months is not covered by the grant.",
-  iconFallbackText: "Warning"
-}) }}
+
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
