--- a/app/views/slurrystorage/current/project-type-fail.html
+++ b/app/views/slurrystorage/current/project-type-fail.html
@@ -29,11 +29,11 @@
       <p class="govuk-body">This grant is for:</p>
       <ul class="govuk-body">
         <li>replacing an existing store that is no longer fit for purpose with a new store </li>
-        <li>adding a new store to increase existing</li>
+        <li>adding a new store to increase existing capacity</li>
         <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
       </ul>
 
-      <p>A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).</p>
+      
 
 
 
