--- a/app/views/slurrystorage/current/tenancy-length-condition.html
+++ b/app/views/slurrystorage/current/tenancy-length-condition.html
@@ -21,13 +21,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="system-type" method="post">
-      <h1 class="govuk-heading-l govuk-!-padding-bottom-5">
+      <h1 class="govuk-heading-l">
         You may be able to apply for a grant from this scheme
       </h1>
 
       <p class="govuk-body">You will need to extend your tenancy agreement before you can complete a full application.</p>
 
-        <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+        <p><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
 
