--- a/app/views/slurrystorage/current/tenancy.html
+++ b/app/views/slurrystorage/current/tenancy.html
@@ -22,7 +22,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">Is the planned project on land the business owns?</h1>
+
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
@@ -32,8 +32,8 @@
                   name: 'tenancy',
                   fieldset: {
                       legend: {
-                          text: '',
-                          isPageHeading: false,
+                          text: 'Is the planned project on land the business owns?',
+                          isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
