--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -42,7 +42,7 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>are a dairy, beef or pig farmer with an existing slurry system</li>
             <li>your slurry store is in England</li>
-            <li>estimate your requested grant is between £25,000 and £250,000 (the minimum and maximum grant amounts)</li>
+            <li>need a grant between £25,000 and £250,000 (the minimum and maximum grant amounts)</li>
           </ul>
         </div>
 
