--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -29,7 +29,9 @@
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Eligible to apply</h2>
     </div>
-    <p class="govuk-body">RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application form.</p>
+    <p class="govuk-body">The RPA wants to fund projects that have a higher environmental benefit.<br><br>
+    We will do this by prioritising projects in areas that need urgent action to reduce nutrient pollution from agriculture and restore natural habitats.<br><br>
+    Depending on the number of applications received, we may invite projects outside these areas to submit a full application.</p>
 
   <div class="govuk-warning-text">
 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
