--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -87,7 +87,7 @@ Existing size storage
                 </span>
               </summary>
               <div class="govuk-details__text">
-                A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).
+                A store is no longer fit for purpose if it has reached the end of its design life and may be susceptible to leaks or failure.
               </div>
             </details>
 
