--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -52,14 +52,7 @@
           </fieldset>
         </div>
 
-        <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to evidence summary
-          </button>
-        {% endif %}
-      </p>
+        <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
       </form>
     </div>
