--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -86,7 +86,7 @@ Project type
               </span>
             </summary>
             <div class="govuk-details__text">
-              A store is no longer fit for purpose if it has reached the end of its design life (for example, it may be susceptible to leaks or failure).
+              A store is no longer fit for purpose if it has reached the end of its design life and may be susceptible to leaks or failure.
             </div>
           </details>
       </div>
