--- a/app/views/slurrystorage/current/reference-number.html
+++ b/app/views/slurrystorage/current/reference-number.html
@@ -53,17 +53,11 @@
 <ol class="govuk-list govuk-list--number govuk-list--spaced">
   <li>RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application form.</li>
 
-   <p>If your project is invited to submit a full application, you need:</p>
-     <ul class="govuk-list govuk-list--bullet">
-
-       <li>a storage calculation plan, which you will need to submit for review to the Environment Agency</li>
-       <li>confirmation that your project will comply with Water Resources (Control of Pollution) (Silage, Slurry and Agricultural Fuel Oil) regulations (SSAFO) and build standards (signed by you and your engineer)</li>
-       <li>a nutrient management plan</li>
-       <li>a declaration that you will comply with monitoring requirements</li>
-     </ul>
+   <p>If your project is invited to submit a full application, you will be asked to provide further information about your project.</p>
 
 
-  <li>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects. </li>
+
+  <li>If you submit an application, RPA will assess it is eligible and meets the rules of the grant.</li>
   <li>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</li>
 </ol>
 
