--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -40,10 +40,11 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a dairy, beef or pig farmer with an existing slurry system</li>
-            <li>your slurry store is in England</li>
-            <li>need a grant between £25,000 and £250,000 (the minimum and maximum grant amounts)</li>
+            <li>are a dairy, beef or pig farmer</li>
+            <li>have an existing slurry system</li>
+            <li>have a slurry store in England</li>
           </ul>
+          <p class="govuk-body">The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
         </div>
 
       <div class="govuk-inset-text">
