--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -32,7 +32,7 @@ Current storage capacity
     </label>
   </h1>
   <div id="current-capacity-hint" class="govuk-hint">
-    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
   </div>
   <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -53,7 +53,7 @@ Current storage capacity
           </label>
         </h1>
         <div id="current-capacity-hint" class="govuk-hint">
-          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
         </div>
         <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
