--- a/app/views/slurrystorage/current/consent.html
+++ b/app/views/slurrystorage/current/consent.html
@@ -11,7 +11,7 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
   <a class="govuk-back-link" href="check-details">Back</a>
 
@@ -25,16 +25,18 @@
       <fieldset class="govuk-fieldset" aria-describedby="consent-to-terms-hint">
         <h1 class="govuk-heading-l">Confirm and send</h1>
           <p class="govuk-body">I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-          <p class="govuk-body">I understand the project’s eligibility and estimated grant amount was based on the answers I provided. </p>
+          <p class="govuk-body">I understand the project’s eligibility and estimated grant amount is based on the answers I provided.</p>
           <p class="govuk-body">I am aware that the information I submit will be:</p>
-            <ul class="govuk-list govuk-list--bullet"><li> to the best of my knowledge, the details I have provided are correct</li>
+            <ul class="govuk-list govuk-list--bullet">
+
               <li>checked by the RPA</li>
               <li>passed to Natural England so they can contact me to provide advice on my project</li>
               <li>passed to the Environment Agency so that they are aware of my planned project</li>
             </ul>
-            <p class="govuk-body">I am aware that if my project is successful, details of my full application will be shared with the Environment Agency so they can provide assurance on the project location and store design. </p>
-            <br><br>
-            <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
+            <p class="govuk-body">I am aware that if my project is successful, details of my full application will be shared with the Environment Agency so they can provide assurance on the project location and store design.</p>
+            <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. </p>
+
+            <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third-party working for us, to contact you. </p>
 
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
