--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -46,7 +46,7 @@ What type of cover will you have?
                   </label>
                   <div class="govuk-hint govuk-radios__hint">
                     {{properties.hint | safe}}
-                    <p class="govuk-body">({{properties.hint2 | safe}})</p>
+                    <br>({{properties.hint2 | safe}})
                   </div>
 
                 </div>
