--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -26,7 +26,7 @@ Standardised costs
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Grant amounts for eligible items</h2>
         <p class="govuk-body">The Slurry Infrastructure grant uses standardised costs for the eligible items. </p>
-        
+
 
         {{ govukWarningText({
           text: "Items may cost more than the standardised cost.",
@@ -105,9 +105,9 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
-          caption: "Cover type",
+          caption: "Cover",
           captionClasses: "govuk-table__caption--m",
           firstCellIsHeader: true,
           head: [
@@ -145,9 +145,9 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
-          caption: "Reception pit type",
+          caption: "Reception pit",
           captionClasses: "govuk-table__caption--m",
           firstCellIsHeader: true,
           head: [
@@ -161,23 +161,7 @@ Standardised costs
           rows: [
           [
             {
-            text: "Glass-reinforced plastic (GRP) or steel lined"
-            },
-            {
-            html: "£25 per cubic metre"
-            }
-          ],
-          [
-            {
-            text: "Pre-cast concrete "
-            },
-            {
-            html: "£27 per cubic metre"
-            }
-          ],
-          [
-            {
-            text: "In situ cast concrete"
+            text: "Reception pit"
             },
             {
             html: "£30 per cubic metre"
@@ -185,9 +169,9 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
-          caption: "Pump type",
+          caption: "Pump",
           captionClasses: "govuk-table__caption--m",
           firstCellIsHeader: true,
           head: [
@@ -233,7 +217,7 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
           caption: "Pipework",
           captionClasses: "govuk-table__caption--m",
@@ -281,7 +265,7 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
           caption: "Transfer channels",
           captionClasses: "govuk-table__caption--m",
@@ -305,7 +289,7 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
           caption: "Agitator",
           captionClasses: "govuk-table__caption--m",
@@ -337,7 +321,7 @@ Standardised costs
           ]
           ]
         }) }}
-
+        <br><br>
         {{ govukTable({
           caption: "Safety equipment",
           captionClasses: "govuk-table__caption--m",
